--- a/trunk/Madre.com/aboutus.html
+++ b/trunk/Madre.com/aboutus.html
@@ -32,12 +32,27 @@
 					<a href="services.html">SERVICES</a>
 					<a href="supplymanagement.html">SUPPLY MANAGEMENT</a>
 			</div>
-			<div> <img src="css/images/CSR pdf.bmp" width="700"> </div>
+			<div width="700" height="500" style="padding-top:7%;padding-left:7%;padding-right:2%;font-family:Verdana, Geneva, sans-serif;">
+			In Technical Support  Industry Madre Integrated Eng. is the  first company in the world to become the member in United Nations Global Compact
+Madre has a reputation that is second to none in this area based on:
+<ul>
+<li>World class database management system</li>
+<li>Impeccable reputation among the contractor community</li>
+<li>Local onsite support for large workforce deployments</li>
+</ul>
+<ul><b>Client Benefits</b>
+<li>Provision of skilled team of engineering and construction for project management
+team, with critical operations expertise and knowledge.</li>
+<li>IProvide recruiting, training and integration of a multinational workforce
+to achieve project nationalization requirements</li>
+</ul>
+<p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+<p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+</div>
 			<div class=".clr"></div>
-			    <!--<div class="tabs">
-			    <div class="tabcontent"><div class="tabheader">SUSTAINABILITY</div>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-			    <div class="tabcontent"><div class="tabheader">ROUND THE CLOCK</div>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-			    </div>-->
+
 <div style="padding-bottom:0px;">
 <table style="width: 100%;padding-left:3%;padding-right:3%;padding-bottom:0%;padding-top:1%;font-family:Verdana, Geneva, sans-serif;">
 <tr>
