--- a/trunk/Madre.com/responsibility.html
+++ b/trunk/Madre.com/responsibility.html
@@ -19,7 +19,7 @@
 		<table>
 			<tr>
 				<td width="200"align="left"><div id="logo"><a href="index.html"><img src="css/images/logo.jpg" alt="home" border="0"/></a></div></td>
-				<td width="100%" valign="bottom"><div id="title" >Provision of Certified 'A' Grade Engineers & Project Support Staffs </div></td>
+				<td width="100%" valign="bottom"><div id="title" ></div></td>
 				<td width="78" align="right"><div id="unlogo"></div></td>
 			</tr>
 		</table>
@@ -27,26 +27,26 @@
 	<div class="content">
 		<div class="left-panel">
 			<div id="inside-menu">
-					<a href="#">CSR</a>
-					<a href="#">ABOUT US</a>
-					<a href="#">SERVICES</a>
-					<a href="#">SUPPLY MANAGEMENT</a>
+					<a href="index.html">CSR</a>
+					<a href="aboutus.html">ABOUT US</a>
+					<a href="services.html">SERVICES</a>
+					<a href="supplymanagement.html">SUPPLY MANAGEMENT</a>
 			</div>
 
-			<div>
+			<div style="font-family:Trebuchet MS, Helvetica, sans-serif;">
 			<br/><br/>
-			<h2>Our Responsibility</h2>
+			<h2 align="center">OUR RESPONSIBILITY</h2>
 			<p>
 			As an active participant of The UN Global Compact since March 2013, Madre Integrated Engineering support and enact the ten principles of UN Global Compact
 			within our sphere of influence, a set of core values in the areas of human rights, labour standards, the environment and anti-corruption:
 			</p>
-			<h4>Human Rights</h4>
+			<h4 align="center">Human Rights</h4>
 			<ul class="resp_list">
 			  <li><b>Principle 1:</b>&nbsp;Businesses should support and respect the protection of internationally proclaimed human rights; and</li>
 			  <li><b>Principle 2:</b>&nbsp;make sure that they are not complicit in human rights abuses.</li>
 			</ul>
 
-			<h4>Labour</h4>
+			<h4 align="center">Labour</h4>
 			<ul class="resp_list">
 			  <li><b>Principle 3:</b>&nbsp;Businesses should uphold the freedom of association and the effective recognition of the right to collective bargaining.</li>
 			  <li><b>Principle 4:</b>&nbsp;the elimination of all forms of forced and compulsory labour.</li>
@@ -54,14 +54,14 @@
 			  <li><b>Principle 6:</b>&nbsp;the elimination of discrimination in respect of employment and occupation</li>
 			</ul>
 
-			<h4>Environment</h4>
+			<h4 align="center">Environment</h4>
 			<ul class="resp_list">
 			  <li><b>Principle 7:</b>&nbsp;Businesses should support a precautionary approach to environmental challenges;</li>
 			  <li><b>Principle 8:</b>&nbsp;undertake initiatives to promote greater environmental responsibility; and</li>
 			  <li><b>Principle 9:</b>&nbsp;encourage the development and diffusion of environmentally friendly technologies.</li>
 			</ul>
 
-			<h4>Anti-Corruption</h4>
+			<h4 align="center">Anti-Corruption</h4>
 			<ul class="resp_list">
 			  <li><b>Principle 10:</b>&nbsp;Businesses should work against corruption in all its forms, including extortion and bribery</li>
 			</ul>
@@ -71,32 +71,33 @@
 
 
 		</div>
-		<div class="right-panel">
-			<div id="flag"></div>
-			<table width="90%" style="color:white; font-weight:bold;font-size:11pt" >
-				<tr>
-					<td align="center"><br/>Global Initiatives</div></td>
-				</tr>
-				<tr>
-					<td align="center" style="color:#a9e1ff; font-weight:bold;font-size:10pt"><br/><div id="blueprint-logo"></div>Madre Blue Print</td>
-				</tr>
-				<tr>
-					<td align="center"><br/>Our Responsibility</td>
-				</tr>
-				<tr>
-					<td align="left" style="color:white;font-size:10pt">
-						<ul class="resp_list">
-						  <li>Human Rights</li>
-						  <li>Labour</li>
-						  <li>Environment</li>
-						  <li>Anti-Corruption</li>
-						  <li><a href="#">read more...</a></li>
-						</ul>
-					</td>
-				</tr>
-			</table>
+				<div class="right-panel">
+					<div id="flag"></div>
+					<table width="90%" style="color:white; font-weight:bold;font-size:11pt;font-family:Trebuchet MS, Helvetica, sans-serif;" >
+						<tr>
+							<td align="center"><br/>Global Initiatives</div></td>
+						</tr>
+						<tr>
+							<td align="center" style="color:#a9e1ff; font-weight:bold;font-size:10pt"><br/><div id="blueprint-logo"></div>Madre Blue Print</td>
+						</tr>
+						<tr>
+							<td align="center"><br/>Our Responsibility</td>
+						</tr>
+						<tr>
+							<td align="left" style="color:white;font-size:10pt;text-align:center;font-family:Trebuchet MS, Helvetica, sans-serif;">
+							<text style="text-align:center;">
+							As an active participant of The UN
+							Global Compact since March 2013, Madre
+							Integrated Engineering support and enact
+							the ten principles of UN Global Compact
+							within our sphere of influence, a set of
+							core values in the areas of human rights,
+							labour standards,the environment and anti-corruption</text></br>
+							</td>
+						</tr>
+					</table>
 
-		</div>
+				</div>
 
 	</div>
 
